Added code to the convictions directory modules- Modified CriminalList to filter based on the conviction selected.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main id="container">
         <header id="headerContainer">
             <div id="filters">
-                <div class="filter" id="crimeFilter"></div>
+                <div class="filter" id="convictionFilter"></div>
                 <div class="filter" id="officerFilter"></div>
                 <div id="filterButton"></div>
             </div>
