Added radio buttons to switch the background color theme of the criminal cards between random colors and organized colors based on conviction type.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div class="filter" id="convictionFilter"></div>
                 <div class="filter" id="officerFilter"></div>
                 <div id="filterButton"></div>
+                <div id="themeRadios"></div>
             </div>
             <div id="buttonContainer"></div>
         </header>
