added color key forcriminal list background color when organized by conviction type and cleaned up some variable names.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         </header>
         <article id="noteFormContainer"></article>
         <article id="notesListContainer"></article>
-        <article id="listContainer"></article>
+        <article id="listContainerWrapper">
+            <section id="listKeyContainer"></section>
+            <section id="listContainer"></section>
+        </article>
         <article id="dialogContainer"></article>
     </main>
 
