refactored the filter by both button to instead be a checkbox that sets the filter by both state to instantly filter by both options when checked; now users do not have to click a button every time they make a change.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <main id="container">
         <header id="headerContainer">
             <div id="filters">
+                <div id="filterCheckbox"></div>
                 <div class="filter" id="convictionFilter"></div>
                 <div class="filter" id="officerFilter"></div>
-                <div id="filterButton"></div>
                 <div id="themeRadios"></div>
             </div>
             <div id="buttonContainer"></div>
