Added facilities and changed some naming conventions

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 
     <main id="container">
         <header id="headerContainer">
-            <div id="filters">
+            <section id="filters">
                 <div id="filterCheckbox"></div>
                 <div class="filter" id="convictionFilter"></div>
                 <div class="filter" id="officerFilter"></div>
                 <div id="themeRadios"></div>
-            </div>
-            <div id="buttonContainer"></div>
+            </section>
+            <section id="buttonContainer">
+                <div id="buttonContainer__criminalList"></div>
+                <div id="buttonContainer__noteForm"></div>
+                <div id="buttonContainer__noteList"></div>
+                <div id="buttonContainer__witnessList"></div>
+                <div id="buttonContainer__facilityList"></div>
+            </section>
         </header>
         <article id="noteFormContainer"></article>
         <article id="notesListContainer"></article>
